applications/mirakurun/resources/oauth2-proxy-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: oauth2-proxy

spec:
  selector:
    app: oauth2-proxy
  type: ClusterIP
  ipFamilies:
    - IPv4
    - IPv6
  ipFamilyPolicy: RequireDualStack
  ports:
    - name: http
      port: 4180
      targetPort: http
