applications/mirakurun/resources/outpost-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: authentik-outpost

spec:
  type: ExternalName
  externalName: ak-outpost-authentik-embedded-outpost.authentik.svc.materia-cluster.ggrel.net
  ports:
    - name: http
      port: 9000
      targetPort: 9000
