applications/mirakurun/resources/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: service
  annotations:
    backend.materia.ggrel.net/forward-auth: "true"
    haproxy.org/backend-config-snippet: |
      http-request set-path /rpc if { path -m str //rpc }
    haproxy.org/timeout-server: 10m

spec:
  selector:
    app: mirakurun
  type: ClusterIP
  ipFamilies:
    - IPv4
    - IPv6
  ipFamilyPolicy: RequireDualStack
  ports:
    - name: mirakurun
      port: 40772
      targetPort: mirakurun
