applications/mirakurun/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: ingress
  annotations:
    haproxy.org/ssl-redirect: "true"

spec:
  ingressClassName: haproxy
  tls:
    - secretName: tls
      hosts:
        - mirakurun.ggrel.net
  rules:
    - host: mirakurun.ggrel.net
      http:
        paths:
          - path: /outpost.goauthentik.io
            pathType: Prefix
            backend:
              service:
                name: authentik-proxy
                port:
                  name: http
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service
                port:
                  name: mirakurun
